ajout d' authentication flow, PrivateFilter et welcome page